# masquerade-cobol-old

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_QUALITY.md  LICENSE  MVP_PRD.md  README.md  READ_THIS_LAST.md  open-source-guide.html  research.md  run_nist.sh
PRD/: README.md  canonical-ir-choice.md  commercial-framing.md  decision-workshop-questions.md  eval-dataset-strategy.md  evidence-contract.md  hitl-validation.md  incremental-ingest.md  infrastructure-and-deployment.md  locked-decisions.md  numeric-semantics-contract.md  parser-failure-policy.md  product-wedge.md  reimplementation-roadmap.md  scope-and-language.md  security-model.md  trust-and-correctness.md
docs/: DESIGN.md  FEATURES.md  JAVA_TARGET.md
engineering/: architecture.md  bootstrap.md  implementation-plan.md  mvp-backlog.md  repo-structure.md
pipeline/: .env  .env.example  _explore_cobolcraft.py  _gen_cobolcraft.py  _inspect_parsed.py  analyze.py  api_contract_mapper.py  bms_parser.py  bms_symbolic.py  business_rules.py  cics_stub.py  cli.py  cli_data.py  cli_generate.py  cli_graph.py  cobol_decimal.py  cobol_parser.py  cobol_runner.py  complexity.py  (+25 more)
services/analysis-orchestrator/: README.md  pyproject.toml
services/analysis-orchestrator/analysis_orchestrator.egg-info/: PKG-INFO  SOURCES.txt
services/analysis-orchestrator/app/: __init__.py  main.py
services/analysis-orchestrator/tests/: test_claim_contract.py  test_readiness_from_validation.py  test_readiness_gate_contract.py
services/analysis-orchestrator/tests/fixtures/: analysis_query_request.json  readiness_evaluate_request.json
(+1151 files in other folders)
